updates to the front page
Added more stuff:
- List of skills as part of resume,
- fixed photos.
- added footer

comment:
shape of design is coming along

--- a/portfolioni/src/frontPage/projects/myProjects.css
+++ b/portfolioni/src/frontPage/projects/myProjects.css
@@ -7,6 +7,9 @@
     padding-top: 5vh;
 }
 .gridObject{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-row: 2 / span 2 ;
     padding: 2vw;
     border: solid rgb(165, 200, 158)  2px;
     background-color: beige;
