--- a/portfolioni/src/frontPage/games/ticTacToe.css
+++ b/portfolioni/src/frontPage/games/ticTacToe.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .ticTacToe{
     display: flex;
     flex-direction: column;
@@ -8,14 +12,20 @@
 .ticTacToeGrid{
     display: grid;
     grid-template-columns: 4vh 4vh 4vh;
+    gap: 0.1vw;
+
 }
 
 .ticTacToeGriObject{
     height: 4vh;
     width: 4vh;
+    
 }
 
 .ticTacToeButton{
     height: 4vh;
     width: 4vh;
+    background-color: oklch(97% 0.014 254.604);
+    border: solid 1px black;
+    border-radius: 50%;
 }
